src/components/article.module.scss
@use "../styles/variables.scss" as *;
@use "../styles/mixins.scss";

article {
  position: relative;
  margin: 0;
  padding: $xsSpacing 0;
  border-radius: 0;
  border: none;
  background-color: $white98;
  box-shadow: none;
  * {
    margin: 0;
    padding: 0;
  }
  p.publish-date {
    margin-bottom: $tinySpacing;
  }
  div.article-info {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    gap: $tinySpacing;
    margin-top: $tinySpacing;
    * {
      display: flex;
      align-items: center;
      color: $gray60;
      text-decoration: none;
      svg {
        height: 1.25rem;
        width: auto;
        margin-right: 0.5rem;
        .styled-svg-element {
          stroke: $magenta80;
          stroke-width: 3px;
        }
      }
    }
  }
}

@media screen and (min-width: $desktopWidth) {
  article {
    margin: calc(-1 * $mediumSpacing) auto $smallSpacing;
    padding: $mediumSpacing;
    border-radius: $mediumBorderRadius;
    box-shadow: $smallBoxShadow;
  }
}

@media (prefers-color-scheme: dark) {
  article {
    @include mixins.dark-scheme;
    border: $borderGray40;
  }
}

